# Synapse

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Synapse_Kaggle.ipynb  build_bundle.bat  build_nuitka.bat  requirements.txt  vcpkg.json
frontend/visualizer-app/: main.js  next.config.ts  package-lock.json  package.json
frontend/visualizer-app/app/: layout.tsx  page.tsx
frontend/visualizer-app/components/: BarVisualizer.tsx
include/: AudioHandler.h
python/: edge_server.py  mic_check.py  reciever.py  requirements.txt  start_linux.sh  start_windows.bat
python/engine/: assistant_state_manager.py  chat_manager.py  dynamic_db_engine.py  event_bus.py  identity_manager.py  llm_engine.py  main.py  main_kaggle.py  music_engine.py  music_engine_kaggle.py  reminder_engine.py  stt_engine.py  stt_engine_kaggle.py  tts_engine.py  tts_engine_kaggle.py  vision_pro.py  vision_pro_kaggle.py  weather_system.py
src/: .rsync_filter  AudioHandler.cpp  CameraHandler.cpp  NetworkHandler.cpp  main.cpp
